--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,13 @@
     <meta name="theme-color" content="#ffffff">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Anastasiia Liubiashcheva</title>
+
+    <meta content="/images/screenshot.jpg" property="og:image" />
+    <meta content="/images/screenshot.jpg" property="twitter:image" />
+    <meta property="og:type" content="website" />
+    <meta name="keywords" content="">
+    <meta name="description" content="I’m here to help you see and build your own Universe - an ecosystem of products on the basis of your mission, vision and existing.">
+    <meta content="summary_large_image" name="twitter:card" />
   </head>
   <body>
     <div id="root"></div>
